New version of the plugin